review alignment issue is fixed.

--- a/public/stylesheets/plannto.css
+++ b/public/stylesheets/plannto.css
@@ -1620,7 +1620,6 @@ div.rate_content {
     text-align: center;
     margin-top: 3px;
     border: none;
-    float: right;
     margin-right: 2px;
 }
 
